# dual_autodiff

./: .gitignore  README.md  activate_venv.sh  dual_autodiff.ipynb  pyproject.toml  requirements.txt
DualNum/: Dual.py  __init__.py  version.py
dist_wheels/: dual_autodiff_x-0.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.2.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
docs/source/: DualNum.rst  modules.rst
dual_autodiff_x/: pyproject.toml  setup.py
dual_autodiff_x/DualNum_c/: Dual_c.c  Dual_c.pyx
dual_autodiff_x/DualNum_c/dual_autodiff_x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dual_autodiff_x/dual_autodiff_x.egg-info/: SOURCES.txt
dual_autodiff_x/source/: conf.py  index.rst
dual_autodiff_x/test_env/: pyvenv.cfg
dual_autodiff_x/wheel_contents/DualNum_c/: __init__.py
dual_autodiff_x/wheel_contents/dual_autodiff_x-0.0.0.dist-info/: METADATA  RECORD
dual_autodiff_x/wheel_contents/dual_autodiff_x-0.2.0.dist-info/: METADATA  RECORD
dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.0.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.2.0-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
source/: conf.py  cythonized.rst  index.rst  modules.rst
source/notebooks/: dual_autodiff.ipynb  tutorial.ipynb
tests/: test_comparisons.py  test_dual.py  test_dual_c.py
