[build-system]
requires = ["setuptools>=42", "setuptools_scm", "wheel"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for Dual number arithmetic, including operations and other mathematical functions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Saam Nazempour", email = "sn665@cam.ac.uk" },
]
keywords = ["dual numbers", "automatic differentiation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering"
]

# Runtime dependencies
dependencies = []

[project.urls]
"Documentation" = "https://your-readthedocs-url-here"
"Source" = "https://github.com/S-Nazem/dual_autodiff"
"Issues" = "https://github.com/S-Nazem/dual_autodiff/issues"


[tool.setuptools_scm]
write_to = "DualNum/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["DualNum"]