[build-system]
requires = ["setuptools", "wheel", "cython", "setuptools_scm"] 
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x" 
dynamic = ["version"]
description = "A Cythonized Python package for dual number arithmetic with autodiff."
dependencies = []

[tool.setuptools_scm]
write_to = "DualNum_c/version.py"

[tool.setuptools.packages.find]
where = ["DualNum_c"]