[build-system]
requires = ["setuptools", "wheel", "cython", "setuptools_scm"] 
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x" 
dynamic = ["version"]
description = "A Cythonized Python package for dual number arithmetic with autodiff."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Saam Nazempour", email = "sn665@cam.ac.uk" },
]
keywords = ["dual numbers", "automatic differentiation", "cythonized code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries"
]
dependencies = []

[tool.setuptools_scm]
write_to = "DualNum_c/version.py"

[tool.setuptools.packages.find]
where = ["DualNum_c"]